--- a/Simple Calorie For iPad/Simple Calorie For iPad/Base.lproj/Main.storyboard
+++ b/Simple Calorie For iPad/Simple Calorie For iPad/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Search Result View Controller-->
@@ -17,40 +18,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kq8-k7-zbW">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                                <color key="backgroundColor" red="0.078431372550000003" green="0.62745098040000002" blue="0.62745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.099348291754722595" green="0.56550288200378418" blue="0.55892848968505859" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xm4-Wv-Gq4">
                                     <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="20" minY="80" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellReuse" id="j3K-TA-CJD">
-                                        <rect key="frame" x="20" y="80" width="100" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="XQQ-cF-gz6">
-                                <rect key="frame" x="0.0" y="20" width="768" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by Nutritionix API" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8go-JD-MLJ">
+                                <color key="backgroundColor" red="0.96887014240000002" green="0.99798708300000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="XQQ-cF-gz6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="1CD-Az-Rhh"/>
                             <constraint firstAttribute="trailing" secondItem="XQQ-cF-gz6" secondAttribute="trailing" id="8kG-0m-4Li"/>
                             <constraint firstItem="Kq8-k7-zbW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Elo-M3-ArK"/>
+                            <constraint firstItem="8go-JD-MLJ" firstAttribute="top" secondItem="XQQ-cF-gz6" secondAttribute="bottom" id="JB1-fY-0WX"/>
+                            <constraint firstItem="8go-JD-MLJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MMz-hP-QQ6"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Kq8-k7-zbW" secondAttribute="bottom" id="Y8q-3W-zWs"/>
                             <constraint firstItem="XQQ-cF-gz6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eXU-cT-u4M"/>
                             <constraint firstItem="Kq8-k7-zbW" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="mxC-5Y-Ae7"/>
+                            <constraint firstAttribute="trailing" secondItem="8go-JD-MLJ" secondAttribute="trailing" id="pbH-C2-96H"/>
                             <constraint firstAttribute="trailing" secondItem="Kq8-k7-zbW" secondAttribute="trailing" id="y7M-eJ-OiQ"/>
                         </constraints>
                     </view>
@@ -65,4 +62,9 @@
             <point key="canvasLocation" x="1960" y="618"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination"/>
+    </simulatedMetricsContainer>
 </document>
