--- a/Simple Calorie For iPad/Simple Calorie For iPad/FoodBox.xib
+++ b/Simple Calorie For iPad/Simple Calorie For iPad/FoodBox.xib
@@ -16,28 +16,31 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Steak,handsome" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gV-Qt-IUB">
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.96887014240000002" green="0.99798708300000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="385 Cal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msS-Fv-PIM">
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.96887014240000002" green="0.99798708300000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keg Steak House" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28b-WS-BDd">
+                        <constraints>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="180" id="9Jw-dm-ImV"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.96887014240000002" green="0.99798708300000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.96887014240000002" green="0.99798708300000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.078431372550000003" green="0.62745098040000002" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="28b-WS-BDd" firstAttribute="leading" secondItem="NtW-n3-Kxj" secondAttribute="leading" constant="8" id="BMe-Jo-pgF"/>
+                <constraint firstItem="28b-WS-BDd" firstAttribute="leading" secondItem="NtW-n3-Kxj" secondAttribute="leading" constant="8" id="Glw-CZ-Uyh"/>
                 <constraint firstAttribute="trailing" secondItem="5gV-Qt-IUB" secondAttribute="trailing" constant="8" id="IaZ-sD-eyh"/>
                 <constraint firstItem="5gV-Qt-IUB" firstAttribute="top" secondItem="NtW-n3-Kxj" secondAttribute="top" constant="8" id="aJc-ML-gTX"/>
                 <constraint firstAttribute="trailing" secondItem="msS-Fv-PIM" secondAttribute="trailing" constant="8" id="eIw-wi-fla"/>
-                <constraint firstAttribute="bottom" secondItem="28b-WS-BDd" secondAttribute="bottom" constant="8" id="n6K-lo-kmE"/>
+                <constraint firstItem="28b-WS-BDd" firstAttribute="bottom" secondItem="msS-Fv-PIM" secondAttribute="bottom" id="g1R-dI-yZR"/>
                 <constraint firstAttribute="bottom" secondItem="msS-Fv-PIM" secondAttribute="bottom" constant="8" id="suB-Xn-tru"/>
                 <constraint firstItem="5gV-Qt-IUB" firstAttribute="leading" secondItem="NtW-n3-Kxj" secondAttribute="leading" constant="8" id="yjZ-lw-wGU"/>
             </constraints>
