--- a/Simple Calorie For iPad/Simple Calorie For iPad/Base.lproj/Main.storyboard
+++ b/Simple Calorie For iPad/Simple Calorie For iPad/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -45,7 +46,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4N0-X3-jp1" customClass="GADBannerView">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="cAc-pR-fD1"/>
+                                    <constraint firstAttribute="height" constant="100" id="GgU-FY-d1w"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -53,27 +54,28 @@
                         <constraints>
                             <constraint firstItem="8go-JD-MLJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="18b-f0-e8k"/>
                             <constraint firstItem="XQQ-cF-gz6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3Mv-9z-e0c"/>
+                            <constraint firstAttribute="bottom" secondItem="4N0-X3-jp1" secondAttribute="bottom" id="4Sq-ht-6Aa"/>
                             <constraint firstItem="DLO-HA-HNU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5K2-Mo-gjh"/>
-                            <constraint firstAttribute="bottom" secondItem="4N0-X3-jp1" secondAttribute="bottom" id="7Ju-E8-kzG"/>
+                            <constraint firstAttribute="trailing" secondItem="4N0-X3-jp1" secondAttribute="trailing" id="5VF-jd-ZoS"/>
                             <constraint firstItem="XQQ-cF-gz6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="BHb-aB-xLt"/>
                             <constraint firstAttribute="trailing" secondItem="8go-JD-MLJ" secondAttribute="trailing" id="C5G-qK-BEG"/>
                             <constraint firstItem="Kq8-k7-zbW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Elo-M3-ArK"/>
                             <constraint firstAttribute="trailing" secondItem="Kq8-k7-zbW" secondAttribute="trailing" id="JbO-oN-bmg"/>
                             <constraint firstAttribute="trailing" secondItem="XQQ-cF-gz6" secondAttribute="trailing" id="PeG-YO-jTH"/>
-                            <constraint firstAttribute="trailing" secondItem="4N0-X3-jp1" secondAttribute="trailing" id="Wrq-I8-XeO"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Kq8-k7-zbW" secondAttribute="bottom" id="Y8q-3W-zWs"/>
                             <constraint firstItem="8go-JD-MLJ" firstAttribute="top" secondItem="DLO-HA-HNU" secondAttribute="bottom" id="Zf4-i7-cr7"/>
-                            <constraint firstItem="4N0-X3-jp1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="azA-Jy-Lu0"/>
                             <constraint firstAttribute="bottom" secondItem="Kq8-k7-zbW" secondAttribute="bottom" id="cjf-dl-cDd"/>
                             <constraint firstItem="DLO-HA-HNU" firstAttribute="top" secondItem="XQQ-cF-gz6" secondAttribute="bottom" id="js9-IP-nRg"/>
                             <constraint firstAttribute="trailing" secondItem="DLO-HA-HNU" secondAttribute="trailing" id="mbv-jd-6Ki"/>
                             <constraint firstItem="Kq8-k7-zbW" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="mxC-5Y-Ae7"/>
                             <constraint firstItem="Kq8-k7-zbW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="r5Y-ga-L7d"/>
+                            <constraint firstItem="4N0-X3-jp1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="u4y-7h-5i0"/>
                             <constraint firstAttribute="trailing" secondItem="Kq8-k7-zbW" secondAttribute="trailing" id="y7M-eJ-OiQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="yIx-10-DR5"/>
                     <connections>
+                        <outlet property="bannerView" destination="4N0-X3-jp1" id="Ze2-33-4tR"/>
                         <outlet property="collectionView" destination="Kq8-k7-zbW" id="z1s-tK-KVd"/>
                         <outlet property="optionalField" destination="DLO-HA-HNU" id="7iD-Qo-C6C"/>
                         <outlet property="searchBar" destination="XQQ-cF-gz6" id="vH6-hB-8y5"/>
